clusters/apps/tandoor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandoor
  namespace: apps
  annotations:
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: recipes.homelab.haseebmajid.dev
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  number: 80
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  number: 8080
  tls:
    - hosts:
        - recipes.homelab.haseebmajid.dev
      secretName: recipes-haseebmajid-dev-tls
